<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">blaine1 Claims Manager</string>
    <string name="title_activity_list_claims">Claims</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_expense">New Expense</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="title_activity_edit_claim">EditClaimActivity</string>
    <string name="approve">Approve</string>
    <string name="submit">Submit</string>
    <string name="return_string">Return</string>
    <string name="claim_dates">Claim Dates</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="claim_end">Claim End:</string>
    <string name="claim_start">Claim Start:</string>
    <string name="accept">Accept</string>
    <string name="new_expense">New Expense</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="app_title">blaine1 Travel Expense Tracker</string>
    <string name="progress">Progress</string>
    <string name="currencies">Currencies</string>
    <string name="expense_totals">Expense Totals</string>

</resources>
