<LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:id="@+id/claimLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
       android:paddingTop="@dimen/activity_vertical_margin"
       tools:context="blainelewis1.cmput301assignment1.ViewClaimActivity" >

       <TextView
           android:id="@+id/claim_description"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/description"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <TextView
           android:id="@+id/claimStatus"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/status" />

       <TextView
           android:id="@+id/claim_dates"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
           android:text="@string/claim_dates" />
       
       <TextView
           android:id="@+id/claim_expense_totals"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
           android:text="@string/expense_totals" />

       <View
	    android:layout_width="fill_parent"
    	android:layout_height="20dp"
    	/>
       
       <ListView
           android:id="@+id/claim_expense_list"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="5.17" >
       </ListView>

       <Button
           android:id="@+id/submitClaim"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="setClaimSubmitted"
           android:text="@string/submit"
           android:visibility="invisible" />

       <Button
           android:id="@+id/approveClaim"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="setClaimApproved"
           android:text="@string/approve"
           android:visibility="gone" />

       <Button
           android:id="@+id/returnClaim"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="setClaimReturned"
           android:text="@string/return_string"
           android:visibility="gone" />
</LinearLayout>