<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="blainelewis1.cmput301assignment1.ExpenseActivity" >

    
    <item
        android:id="@+id/action_finish_edit_expense"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/accept"/>
    
    <item
        android:id="@+id/action_delete_expense"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/delete"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
