<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ClaimScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <LinearLayout
        android:id="@+id/claimLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="blainelewis1.cmput301assignment1.ViewClaimActivity" >

        <TextView
            android:id="@+id/claimDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/claimStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <ListView
            android:id="@+id/totalCostsList"
            android:layout_width="match_parent"
            android:layout_height="120dp" >
        </ListView>

        <TextView
            android:id="@+id/claim_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/claim_dates" />

        <ListView
            android:id="@+id/claim_expense_list"
            android:layout_width="match_parent"
            android:layout_height="197dp" >

        </ListView>

        <Button
            android:id="@+id/submitClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:visibility="invisible"
            android:text="@string/submit" 
            android:onClick="setClaimSubmitted"
            />

        <Button
            android:id="@+id/approveClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/approve" 
            android:onClick="setClaimApproved"
            />

        <Button
            android:id="@+id/returnClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/return_string"
            android:onClick="setClaimReturned"
            />

    </LinearLayout>

</ScrollView>
