<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/claimLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/claim_list_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:maxLines="2"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/claim_list_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/claim_list_item_expense_totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/currencies"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>