<?xml version="1.0" encoding="utf-8"?><GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/expense_list_item_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/expense_list_item_date"
        android:layout_toEndOf="@+id/expense_list_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
    
   <TextView
        android:id="@+id/expense_list_item_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_columnSpan="2"
        android:layout_gravity="end|top"
        android:gravity="end"
        android:layout_row="1"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</GridLayout>