    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        tools:context="blainelewis1.cmput301assignment1.ExpenseActivity" >

         <EditText
            android:id="@+id/edit_expense_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine" >
                    <requestFocus />
		</EditText>
        
        <EditText
            android:id="@+id/edit_expense_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date" >
        </EditText>

        <Spinner
            android:id="@+id/edit_expense_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberSigned|numberDecimal" />

        <Spinner
            android:id="@+id/edit_expense_currency_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>